crash, Helicopter, blender 2.74 demo file #70279

Closed
opened 2019-09-26 16:23:53 +02:00 by noki paike · 16 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: AMD Radeon HD 7600M Series ATI Technologies Inc. 4.5.13422 Core Profile Context 0

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 20:42, hash: ee47075449
Worked: (optional)

Short description of error
this file crash blender on load, i tryed to append objects from the file and crash the same.
scene-Helicopter-27.blend

is from demofiles on blender page.
https://download.blender.org/demo/test/Demo_274.zip

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: AMD Radeon HD 7600M Series ATI Technologies Inc. 4.5.13422 Core Profile Context 0 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 20:42, hash: `ee47075449` Worked: (optional) **Short description of error** this file crash blender on load, i tryed to append objects from the file and crash the same. [scene-Helicopter-27.blend](https://archive.blender.org/developer/F7775860/scene-Helicopter-27.blend) is from demofiles on blender page. https://download.blender.org/demo/test/Demo_274.zip
Author

Added subscriber: @nokipaike

Added subscriber: @nokipaike
noki paike changed title from crash, Helicpoter, blender 2.74 demo file to crash, Helicopter, blender 2.74 demo file 2019-09-26 16:25:15 +02:00

Added subscriber: @bent

Added subscriber: @bent

Yeah, it crashes for me too - The thing that seems to make blender crash is the Curve.009 which is in the Curve.000 object which is in the Helicopter collection. Appending the other objects seems to work fine

Yeah, it crashes for me too - The thing that seems to make blender crash is the Curve.009 which is in the Curve.000 object which is in the Helicopter collection. Appending the other objects seems to work fine
Author

I tried to append the objects except Curve.000 and Curve.009 but it continues to crash :/

I tried to append the objects except Curve.000 and Curve.009 but it continues to crash :/

Added subscriber: @Harvester

Added subscriber: @Harvester

Here on :

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 20:42, hash: ee47075449
Worked: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449

Short description of error
I can open the attached .blend file in Blender 2.80 official release version, as well as append the Scene from it. So, I did save the file from Blender 2.80.

Opening or appending (Scene) the provided .blend file (v.2.79) crashes Blender 2.81 with the following messages in the console:

Read blend: D:\Downloads\scene-Helicopter-27.blend
read file D:\Downloads\scene-Helicopter-27.blend

Version 280 sub 51 date 2019-03-21 00:58 hash 0bbff8a71138

Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF6ADA33871
Module : D:\Blender\blender-2.8_dev\blender.exe

Opening or appending (Scene) from the saved 2.80 version of the provided 2.79 file in Blender 2.81 crashed Blender with the following messages in the console:

Read blend: D:\Downloads\scene-Helicopter-28_open-file.blend
read file D:\Downloads\scene-Helicopter-28_open-file.blend

Version 280 sub 75 date 2019-07-29 14:47 hash f6cb5f54494e

Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF6ADA33871
Module : D:\Blender\blender-2.8_dev\blender.exe

Then, appending one by one the Objects from the 2.80 saved version went fine with everything but the following curve objects, leading to a crash:
Curve.011
Curve.000

Appending the following single curve data sets lead to a crash:
Curve.009
Curve.014

Here on : **System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 20:42, hash: `ee47075449` Worked: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` **Short description of error** I can open the attached .blend file in Blender 2.80 official release version, as well as append the Scene from it. So, I did save the file from Blender 2.80. Opening or appending (Scene) the provided .blend file (v.2.79) crashes Blender 2.81 with the following messages in the console: Read blend: D:\Downloads\scene-Helicopter-27.blend read file D:\Downloads\scene-Helicopter-27.blend ``` Version 280 sub 51 date 2019-03-21 00:58 hash 0bbff8a71138 ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF6ADA33871 Module : D:\Blender\blender-2.8_dev\blender.exe Opening or appending (Scene) from the saved 2.80 version of the provided 2.79 file in Blender 2.81 crashed Blender with the following messages in the console: Read blend: D:\Downloads\scene-Helicopter-28_open-file.blend read file D:\Downloads\scene-Helicopter-28_open-file.blend ``` Version 280 sub 75 date 2019-07-29 14:47 hash f6cb5f54494e ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF6ADA33871 Module : D:\Blender\blender-2.8_dev\blender.exe Then, appending one by one the Objects from the 2.80 saved version went fine with everything but the following curve objects, leading to a crash: Curve.011 Curve.000 Appending the following single curve data sets lead to a crash: Curve.009 Curve.014
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

What do the objects Curve.011 and Curve.000 have in common?

They are the only objects in the scene using the green material.

This material has a node group with an undefined node

undefined node.jpg

That Blender seems not to found of.

Console warnings.jpg

Deleting just the offending undefined node and saving the file allows me to open it up in

Blender Version 2.81 (sub 12), branch: master, commit date: 2019-09-25 20:42, hash: ee47075449

Just fine

opens fine once node is deleted.jpg

scene-Helicopter-27_deletedcloudtexture.blend

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: AMD Radeon HD 8280 ATI Technologies Inc. 4.5.13399 Core Profile Context 15.201.1101.0


Note: The only other 2.81 version I have on this computer is
2.81 (sub 3), branch: master, commit date: 2019-08-22 20:40, hash: 1de7717ed7
which does not crash when opening the original file if that is of any help in tracking down what commit causes the crashing.

What do the objects Curve.011 and Curve.000 have in common? They are the only objects in the scene using the green material. This material has a node group with an undefined node ![undefined node.jpg](https://archive.blender.org/developer/F7776391/undefined_node.jpg) That Blender seems not to found of. ![Console warnings.jpg](https://archive.blender.org/developer/F7776400/Console_warnings.jpg) Deleting just the offending undefined node and saving the file allows me to open it up in **Blender Version** 2.81 (sub 12), branch: master, commit date: 2019-09-25 20:42, hash: `ee47075449` Just fine ![opens fine once node is deleted.jpg](https://archive.blender.org/developer/F7776416/opens_fine_once_node_is_deleted.jpg) [scene-Helicopter-27_deletedcloudtexture.blend](https://archive.blender.org/developer/F7776420/scene-Helicopter-27_deletedcloudtexture.blend) **System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: AMD Radeon HD 8280 ATI Technologies Inc. 4.5.13399 Core Profile Context 15.201.1101.0 --- Note: The only other 2.81 version I have on this computer is **2.81 (sub 3), branch: master, commit date: 2019-08-22 20:40, hash: `1de7717ed7`** which does not crash when opening the original file if that is of any help in tracking down what commit causes the crashing.
Author

undefined, means that it is some kind of node that existed before and now no longer exists in new versions of blender?

At this point it is not a real bug, or better, the crash can only happen if old scenes containing this "no longer existing node" are loaded.
The problem is, however, that this demo is downloadable from the home page of blender (and it's also a nice demo) so bender can't afford to crash ... the solution is: Either change the file, or set up blender to prevent it from crashing in these cases.

undefined, means that it is some kind of node that existed before and now no longer exists in new versions of blender? At this point it is not a real bug, or better, the crash can only happen if old scenes containing this "no longer existing node" are loaded. The problem is, however, that this demo is downloadable from the home page of blender (and it's also a nice demo) so bender can't afford to crash ... the solution is: Either change the file, or set up blender to prevent it from crashing in these cases.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-09-27 12:17:03 +02:00
Member

Sounds like an error in versioning code from 23564583a4, should be fixied similar to 5d9c01c53f.

Sounds like an error in versioning code from 23564583a4, should be fixied similar to 5d9c01c53f.
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

So we are getting the crash in the versioning code due to node->storage being NULL.
This can happen in certain scenarios (see #69663 for how this can happen).

In this case though, did some digging, and there really seems to be something wrong with that file from https://download.blender.org/demo/test/Demo_274.zip
That Noise texture node in that file seems to be invalid, this broke between 2.70 (can read the node) and 2.71 (cant read the node), not sure what the culprit was here, cant find anything suspicious on the 2.71 release notes...

So while we could safeguard against this broken nodes (without node-> storage):
P1120: #70279 safeguard



diff --git a/source/blender/blenloader/intern/versioning_cycles.c b/source/blender/blenloader/intern/versioning_cycles.c
index 2c4ba4a1102..cde5e82790d 100644
--- a/source/blender/blenloader/intern/versioning_cycles.c
+++ b/source/blender/blenloader/intern/versioning_cycles.c
@@ -766,7 +766,9 @@ static void update_vector_math_node_average_operator(bNodeTree *ntree)
 static void update_noise_node_dimensions(bNodeTree *ntree)
 {
   for (bNode *node = ntree->nodes.first; node; node = node->next) {
-    if (node->type == SH_NODE_TEX_NOISE) {
+    /* Can happen in certain scenarios (see update_mapping_node_inputs_and_properties)
+     * OR if the node itself is broken in the file ('Undefined') */
+    if (node->type == SH_NODE_TEX_NOISE && node->storage) {
       NodeTexNoise *tex = (NodeTexNoise *)node->storage;
       tex->dimensions = 3;
     }

We would probably have to do this for all nodes to be consistent? (or make something more generic that checks nodes storages...)
Not sure if we want to go this route?

If we dont want to safeguard, here is a version of that file with the Noise node corrected [saved from 2.74 as advertised :)]
scene-Helicopter-27_saved_from_274_release_with_corrected_noise_node.blend

CC @brecht

So we are getting the crash in the versioning code due to `node->storage` being NULL. This can happen in certain scenarios (see #69663 for how this can happen). In this case though, did some digging, and there really seems to be something wrong with that file from https://download.blender.org/demo/test/Demo_274.zip That `Noise` texture node in that file seems to be invalid, this broke between 2.70 (can read the node) and 2.71 (cant read the node), not sure what the culprit was here, cant find anything suspicious on the 2.71 release notes... So while we could safeguard against this broken nodes (without `node-> storage`): [P1120: #70279 safeguard](https://archive.blender.org/developer/P1120.txt) ``` diff --git a/source/blender/blenloader/intern/versioning_cycles.c b/source/blender/blenloader/intern/versioning_cycles.c index 2c4ba4a1102..cde5e82790d 100644 --- a/source/blender/blenloader/intern/versioning_cycles.c +++ b/source/blender/blenloader/intern/versioning_cycles.c @@ -766,7 +766,9 @@ static void update_vector_math_node_average_operator(bNodeTree *ntree) static void update_noise_node_dimensions(bNodeTree *ntree) { for (bNode *node = ntree->nodes.first; node; node = node->next) { - if (node->type == SH_NODE_TEX_NOISE) { + /* Can happen in certain scenarios (see update_mapping_node_inputs_and_properties) + * OR if the node itself is broken in the file ('Undefined') */ + if (node->type == SH_NODE_TEX_NOISE && node->storage) { NodeTexNoise *tex = (NodeTexNoise *)node->storage; tex->dimensions = 3; } ``` We would probably have to do this for all nodes to be consistent? (or make something more generic that checks nodes storages...) Not sure if we want to go this route? If we dont want to safeguard, here is a version of that file with the Noise node corrected [saved from 2.74 as advertised :)] [scene-Helicopter-27_saved_from_274_release_with_corrected_noise_node.blend](https://archive.blender.org/developer/F7776902/scene-Helicopter-27_saved_from_274_release_with_corrected_noise_node.blend) CC @brecht
Author

@lichtwerk just a little improvement, if the file is updated, the scratches of the metal should not move like reflections :)
graffi.mp4

@lichtwerk just a little improvement, if the file is updated, the scratches of the metal should not move like reflections :) [graffi.mp4](https://archive.blender.org/developer/F7777393/graffi.mp4)
Philipp Oeser removed their assignment 2019-11-06 12:16:43 +01:00

This issue was referenced by 5abd006c78

This issue was referenced by 5abd006c78597f4d3a87e04ca63c1cca367c10bd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-11-06 20:25:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70279
No description provided.