Fix T70279: crash loading certain old, possibly corrupt files with nodes

This test should not be needed and the cause is unclear, but better to avoid
the crash. Possibly caused by files saved with development versions that had
different node type IDs.